syntax = "proto3";

package ldt_hack.auth.v1;
option go_package = "ldt-hack/api/auth/v1";

import "google/protobuf/empty.proto";

service AuthService {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc Select(google.protobuf.Empty) returns (SelectResponse);
}

message EchoRequest {
  string s = 1;
}

message EchoResponse {
  string s = 1;
}

message SelectResponse {
  string s = 1;
}
